<resources>
    <string name="app_name">Polygo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="station_title">Stations</string>
    <string name="pv_title">PV</string>
    <string name="hz_title">HZ</string>
    <string name="v_title">V</string>
    <string name="di_title">Di</string>
    <string name="save_title">Enregistrement de données</string>
    <string name="succes">Données bien enregistrés</string>
    <string name="erreur">Erreur d\'enregistrement</string>
    <string name="invalid_data">Les données ne sont pas valides, vérifier les champs de saisi</string>
    <string name="station_placeholder">Stations</string>
    <string name="pv_placeholder">Pv</string>
    <string name="hz_placeholder">Hz</string>
    <string name="v_placeholder">V</string>
    <string name="di_placeholder">Di</string>
    <string name="add_data_menu">Ajouter des données</string>
    <string name="clear_all">Effacer tout</string>
    <string name="update_title" >Mise à jour de station %1$s</string>
    <string name="delete_label">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="message_confirm_del">Voulez vous supprimer le station %1$s ?</string>
    <string name="message_confirm_del_all">Voulez vous tous effacer?</string>
    <string name="v0_placeholder">Vo Départ</string>
    <string name="x_station_placeholder">X station</string>
    <string name="y_station_placeholder">Y station</string>
    <string name="save_default_data_title">Valeur par defaut</string>
    <string name="info_default_data">Valeur par defaut modifié</string>
    <string name="dh_title">Dh</string>
    <string name="gisement_title">Gisement</string>
    <string name="xm_title">Xm</string>
    <string name="ym_title">Ym</string>
    <string name="data_title">Liste des données</string>
    <string name="result_title">Liste des résultats</string>
    <string name="details">Détails des résultats</string>
    <string name="auteur">By Alain Patrick Rajaonarison</string>

    <string name="add_button">Ajouter</string>
    <string name="validate_button">Ok</string>
    <string name="information">Information</string>
    <string name="export_message">Exportation terminé dans le dossier Polygo</string>
</resources>
